--- a/card1.html
+++ b/card1.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Patty Santamaría - 2021"/>
     <meta name="description" content="Reto de Stats preview card component challenge hub">
     <title>Card</title>
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./estilo.css">
     <link rel="shortcut icon" href="./images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
